# openalex-official

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_download.py  filtered_download.py
examples/notebooks/: download_workflow.ipynb
src/openalex_cli/: __init__.py  api_client.py  checkpoint.py  cli.py  downloader.py  fault_injection.py  filters.py  page_tracker.py  progress.py  rate_limiter.py  state_io.py  utils.py
src/openalex_cli/storage/: __init__.py  local.py  s3.py
src/openalex_content/: __init__.py  api_client.py  cli.py  downloader.py  rate_limiter.py  utils.py
src/openalex_content/storage/: __init__.py  base.py  s3.py
tests/: __init__.py  test_api_client.py  test_checkpoint.py  test_downloader.py  test_list_retry.py  test_multi_filter.py  test_page_tracker.py  test_rate_limiter.py  test_storage.py  test_utils.py
