[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalex-official"
version = "0.3.0"
description = "Official command-line interface for OpenAlex"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "OpenAlex Team", email = "team@openalex.org" }
]
keywords = ["openalex", "cli", "pdf", "download", "scholarly", "research", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiobotocore>=2.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.0",
    "moto[s3]>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
openalex = "openalex_cli.cli:main"

[project.urls]
Homepage = "https://openalex.org"
Documentation = "https://docs.openalex.org/download/openalex-official"
Repository = "https://github.com/ourresearch/openalex-official"
Issues = "https://github.com/ourresearch/openalex-official/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openalex_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
